adjusted package.json

--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
 		"type": "git",
 		"url": "git@github.com:ManifestWebDesign/angular-gridster.git"
 	},
-	"main": "dist/angular-gridster.min.js"
+	"main": "src/angular-gridster.js",
+	"style": "dist/angular-gridster.css"
 }
